--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "better-scroll": "^1.14.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vant": "^1.6.5",
